# Level-I-Order-Flow-Imbalance-and-Quote-Revision-Strategy

./: .env.example  .gitignore  DATA_NOTICE.md  README.md  pyproject.toml
assumptions/: parameter_registry.md
configs/data/: aapl_wrds_20260313_20260410.yaml  aapl_wrds_20260408_20260410.yaml  aapl_wrds_20260424_20260428.yaml
configs/experiments/: v22_symbol_screen_liquid_large_cap.yaml  v22_symbol_screen_phase1_by_liquidity_regime_same_20d.yaml
docs/: README.md
docs/decisions/: 0001_pipeline_stage_boundaries.md  0002_threshold_selection_policy.md  0003_assumption_registry_location.md  0004_cost_model_v1_scope.md  0005_execution_accounting_v1_scope.md  0006_target_position_accounting_scope.md  0007_parameter_sensitivity_scope.md  0008_tvt_parameter_selection_scope.md  0009_backtest_v1_scope.md  0010_aapl_model_prototype_scope.md  0011_large_slice_memory_policy.md  0012_microstructure_v21_independent_diagnostic.md  0013_symbol_screening_v22_additive_layer.md  README.md
scripts/: align_trades.py  build_dataset.py  build_labels.py  build_quote_features.py  build_signals.py  build_signed_flow_features.py  extract_wrds.py  plot_pnl.py  run_backtest.py  run_cost_aware_linear_score.py  run_cost_model.py  run_execution_accounting.py  run_features.py  run_live_paper.py  run_microstructure_diagnostics.py  run_microstructure_v21_diagnostics.py  run_model_training.py  run_parameter_sensitivity.py  run_symbol_screen_v22.py  run_target_position_accounting.py  run_threshold_selection.py  run_tvt_parameter_selection.py  run_walk_forward.py  sign_trades.py
(+143 files in other folders)
